--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
+
 nav{
     display: flex;
     height: 10vh;
-    background-color: #f8f9fa;
+    background-color: whitesmoke;
     align-items: center;
     justify-content: space-around;
     padding: 2.5rem;
     font-size: 1.5rem;
+    font-family: "Hachi Maru Pop", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+nav > h1{
+    transform: translateX(50px);
 }
