--- a/src/components/quiz.css
+++ b/src/components/quiz.css
@@ -45,7 +45,8 @@
 .quiz-buttons button{
     background-image: linear-gradient(to bottom, lightgray 0%, gray  100%);
     cursor: pointer;
-    color: white;
+    color: #1B1B1B;
+    font-weight: bold;
     padding: 1rem 2rem;
     background-size: 100% 200%;
     text-transform: uppercase;
